--- a/Solutions.html
+++ b/Solutions.html
@@ -590,11 +590,11 @@ color: #1d2833;
         <nav class="navbar">
             <div class="logo">Logo</div>
             <ul class="nav-links">
-                <li><a href="/Index.html">Home</a></li>
-                <li><a href="/About.html">About</a></li>
-                <li><a href="/Solutions.html">Services</a></li>
-                <li><a href="/service1.html">Solution</a></li>
-                <li><a href="/Contact.html">Contact</a></li>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Solutions.html">Services</a></li>
+                <li><a href="service1.html">Solution</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
